udev 147
========
Bugfixes.

To support DEVPATH strings larger than the maximum file name length, the
private udev database format has changed. If some software still reads the
private files in /dev/.udev/, which it shouldn't, now it's time to fix it.
Please do not port anything to the new format again, everything in /dev/.udev
is and always was private to udev, and may and will change any time without
prior notice.

Multiple devices claiming the same names in /dev are limited to symlinks
only now. Mixing identical symlink names and node names is not supported.
This reduces the amount of data in the database significantly.

NAME="%k" causes a warning now. It's is and always was completely superfluous.
It will break kernel supplied DEVNAMEs and therefore it needs to be removed
from all rules.

Most NAME= instructions got removed. Kernel 2.6.31 supplies the needed names
if they are not the default. To support older kernels, the NAME= rules need to
be added to the compat rules file.

Symlinks to udevadm with the old command names are no longer resolved to
the udevadm commands.

The udev-acl tool got adopted to changes in ConsoleKit. Version 0.4.11 is
required now.

The option "last_rule" does no longer exist. Its use breaks too many
things which expect to be run from independent later rules, and is an idication
that something needs to be fixed properly instead.

The gudev API is no longer marked as experimental,
G_UDEV_API_IS_SUBJECT_TO_CHANGE is no longer needed. The gudev introspection
is enabled by default now. Various projects already depend on introspection
information to bind dynamic languages to the gudev interfaces.

udev 146
========
Bugfixes.

The udevadm trigger "--retry-failed" option, which is replaced since quite
a while by "--type=failed" is removed.

The failed tracking was not working at all for a few releases. The RUN
option "ignore_error" is replaced by a "fail_event_on_error" option, and the
default is not to track any failing RUN executions.
