@@ -420,12 +420,6 @@
                 <para>Rule and device options:</para>
                 <variablelist>
                   <varlistentry>
-                    <term><option>ignore_device</option></term>
-                    <listitem>
-                      <para>Ignore this event completely.</para>
-                    </listitem>
-                  </varlistentry>
-                  <varlistentry>
                     <term><option>ignore_remove</option></term>
                     <listitem>
                       <para>Do not remove the device node when the device goes away. This may be
